# binance-futures-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.ko.md  README.md  docker-compose.yml  pyproject.toml
config/: profiles.py  settings.py
docs/superpowers/plans/: 2026-03-30-tradingagents-enhancements.md
scripts/: backtest.py  scalp_runner.py  scheduler.py
src/: main.py
src/clients/: binance_rest.py  binance_ws.py
src/db/: models.py
src/indicators/: calculator.py  signals.py
src/memory/: situation_memory.py
src/notifications/: notifier.py
src/risk/: leverage_calc.py  perspectives.py  risk_manager.py
src/scalping/: __init__.py  monitor.py  pipeline.py  watcher.py
src/scanner/: coin_scanner.py  sentiment_filter.py
src/strategy/: adversarial.py  analyzer.py  orchestrator.py  reflection.py
src/trading/: order_executor.py  paper_trader.py  position_monitor.py
tests/: test_adversarial.py  test_coin_scanner.py  test_db_models.py  test_indicators.py  test_leverage_calc.py  test_notifier.py  test_order_executor.py  test_position_monitor.py  test_profiles.py  test_reflection.py  test_risk_manager.py  test_risk_perspectives.py  test_scalping.py  test_sentiment_filter.py  test_signal_quality.py  test_signals.py  test_situation_memory.py
